# cserve

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile.in  Makefile  README.md  cserve_config.h.in
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/phases/01-security-and-safety/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
c-server/: .gitignore  Makefile  README.md  Server.c  Server.h  cserver.ini  cserver.ini.example  test.c
c-server/DataStructures/: dynamic_array.c
c-server/docs/journey/: day02.md  day03.md  day04.md  day05.md
c-server/docs/tutorial/: NetworkProgrammingC.md  version0.md
c-server/src/: HTTPServer.c  HTTPServer.h  Server.c  Server.h  common.h  main.c  server.c  server.h
c-server/src/DataStructures/: dynamic_array.c  dynamic_array.h  vector.c  vector.h
c-server/src/configs/: config.c
c-server/src/http/: HTTPServer.c  HTTPServer.h  parsers.c  parsers.h  request.c  request.h  response.c  response.h  server.c  server.h
c-server/src/sock/: server.c
c-server/tests/: dynamic_array_test.c  http_parsing_test.c  http_request_response.c  test_runner.c  vector_test.c
docs/: FIXES.md  FP_usage.md  REPORT.md
docs/c-server/journey/: day1.md  day2.md
docs/journey/: day02.md  day03.md  day04.md  day06.md
docs/tutorial/: HTTP1_1.md  version0.md  version1.md
experiments/staticfile/: main  main.c  statics  statics.c
experiments/strings/: mystrcat.c  mystrcmp.c  mystrcpy.c  mystrlen.c  parser.c  trim.c
rust-server/: README.md
src/: CMakeLists.txt  Makefile  common.h  main.c
src/connection/: connection.c  connection.h  pool.c  pool.h
src/http/: handlers.c  handlers.h  parsers.c  parsers.h  request.c  request.h  response.c  response.h  server.c  server.h  server_func.c
src/sock/: server.c  server.h
src/utils/: config.c  config.h  logger.c  logger.h
tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake  test_parsers.c  test_runner.c  test_sqrt.c
tests/smoke/: run_all.sh  test_sec01_path_traversal.sh  test_sec02_buffer_overflow.sh  test_sec04_signal.sh
